k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taxiblitz
  labels:
    app.kubernetes.io/part-of: taxiblitz
